2006-09-08  Michael Stucki  <michael@typo3.org>

	* Updates to NEWS.txt
	* Fixed #4165: Link to TSconfig and TSref not working. Thanks to Andreas Wolf for providing a patch!

2006-09-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #1268: plainMailEncoded not working with charset conversion

2006-09-03  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Added su_back.gif image again to gfx

2006-09-03  Wolfgang Klinger <wk@plan2.net>

	* Changed call_user_func to call_user_func_array in t3lib_div to allow passing parameters by reference to t3lib_div::callUserFunction

2006-09-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed #4141: config.spamProtectEmailAddresses does not encrypt "9" digits correctly
	* Web>List localization view did not handle "edit marked" for translation records

2006-09-01 Ingmar Schlecht  <ingmar@typo3.org>

	* Feature #529: Filled static_tsconfig_help with new content of core documents! Thanks a lot to Stephane Schitter for extracting the new data from the references!

2006-09-01  Michael Stucki  <michael@typo3.org>

	* Fixed bug: Creation of sys_refindex table was not possible if $TYPO3_CONF_VARS[SYS][multiplyDBfieldSize] was set.
	* Indexed Search: Fixed bug #3994: OpenOffice.org files cannot be indexed by class.external_parser.php
	* Indexed Search: Fixed bug #4093: PHP warning if indexed_search search word contains a front slash
	* Get rid of blob fields in TYPO3 databases (replaced with "text" fields)

2006-08-31  Ernesto Baschny <ernst@cron-it.de>

	* Fixed bug #4035/3971: Error message when uploading one or two files in file-browser (BE)

2006-08-31  Ernesto Baschny <ernst@cron-it.de>

	* Feature #4131: Respects label_alt setting in some more places (especially labels pointing to MM tables)

2006-08-31  Wolfgang Klinger <wolfgang@stufenlos.net>

	* Feature #3026: Text change for the 'Quality' label

2006-08-31  Dmitry Dulepov  <typo3@accio.lv>
