@@ -1,3 +1,7 @@
+2006-09-11  Michael Stucki  <michael@typo3.org>
+
+	* Fixed a tiny security problem in indexed search (for details, see http://typo3.org/teams/security/security-bulletins/typo3-20060911-1/)
+
 2006-09-08  Michael Stucki  <michael@typo3.org>
 
 	* Updates to NEWS.txt
